--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wanku"
+    package="net.vicyu.wanku"
     android:versionCode="2"
-    android:versionName="1.1" >
+    android:versionName="1.2" >
 	<uses-permission android:name="android.permission.INTERNET" /> 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
         <activity
-            android:name=".AppStart"
+            android:name="com.wanku.AppStart"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
@@ -24,13 +24,13 @@
             </intent-filter>
         </activity>
         <activity 
-            android:name=".SimpleQuery"
+            android:name="com.wanku.SimpleQuery"
             />
         <activity 
-            android:name=".FullQuery"
+            android:name="com.wanku.FullQuery"
             />
         <activity
-            android:name="FullScreen"
+            android:name="com.wanku.FullScreen"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
              />
     </application>
